# django-todo-htmx

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: .gitignore  asgi.py  settings.py  urls.py
theme/static_src/: package-lock.json  package.json
todo/core/: forms.py  models.py  urls.py  views.py
todo/core/migrations/: 0001_initial.py  0002_todo.py
todo/templates/todo/: add_item_form.html  base.html  index.html  item.html  todo_items.html
